fix nav on smaller screens

--- a/assets/base.css
+++ b/assets/base.css
@@ -2373,9 +2373,9 @@ input[type='checkbox'] {
   }
 }
 
-@media screen and (min-width: 990px) {
+@media screen and (min-width: 1128px) {
   .header {
-    grid-template-columns: 1fr auto 1fr;
+    grid-template-columns: 150px auto 150px;
   }
 
   .header--top-left,
@@ -2395,7 +2395,7 @@ input[type='checkbox'] {
 
   .header--middle-left {
     grid-template-areas: 'heading navigation icons';
-    grid-template-columns: 200px auto 200px;
+    grid-template-columns: 150px auto 150px;
     column-gap: 2rem;
   }
 
@@ -2471,7 +2471,7 @@ input[type='checkbox'] {
   transition: width 0.3s cubic-bezier(0.52, 0, 0.61, 0.99);
 }
 
-@media screen and (max-width: 989px) {
+@media screen and (max-width: 1128px) {
   .header__heading,
   .header__heading-link {
     text-align: center;
@@ -2488,7 +2488,7 @@ input[type='checkbox'] {
   }
 }
 
-@media screen and (min-width: 990px) {
+@media screen and (min-width: 1129px) {
   .header--middle-left .header__heading-link,
   .header--top-left .header__heading-link {
     margin-left: -0.75rem;
@@ -2779,7 +2779,7 @@ details[open] > .header__submenu {
   margin-left: 0;
 }
 
-@media screen and (min-width: 990px) {
+@media screen and (min-width: 1128px) {
   .header__inline-menu {
     display: block;
   }
@@ -3806,7 +3806,7 @@ button[disabled] {
   border-color: rgb(0, 0, 0, 0.05);
 }
 
-@media (min-width: 990px) {
+@media (min-width: 1129px) {
 
   .header.page-width,
   .utility-bar__grid.page-width {
@@ -3823,7 +3823,7 @@ button[disabled] {
   }
 }
 
-@media (max-width: 990px) {
+@media (max-width: 1128px) {
   .header {
     padding-left: 0px !important;
     padding-right: 1rem !important;
